[tool.poetry]
name = "python-rest-api"
version = "0.1.0"
description = ""
authors = ["theNeuralHorizon <kshitij.betwal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
